--- a/Morser/Localizable.xcstrings
+++ b/Morser/Localizable.xcstrings
@@ -3222,6 +3222,9 @@
         }
       }
     },
+    "Warning: This feature uses your screen at maximum brightness, which may trigger seizures, migraines, or visual discomfort in sensitive individuals. Use with caution." : {
+
+    },
     "Yes, I can guide you." : {
       "localizations" : {
         "el" : {
