To be translated

--- a/Morser/Localizable.xcstrings
+++ b/Morser/Localizable.xcstrings
@@ -1961,6 +1961,9 @@
         }
       }
     },
+    "Screen Flashlight Haptics" : {
+
+    },
     "Sentence to encode" : {
       "localizations" : {
         "el" : {
